<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/home_dest">

    <fragment
        android:id="@+id/home_dest"
        android:name="com.dip.aiassistant.ui.fragments.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/chat_dest"
        android:name="com.dip.aiassistant.ui.fragments.ChatFragment"
        android:label="@string/chat"
        tools:layout="@layout/fragment_chat" />

    <fragment
        android:id="@+id/tools_dest"
        android:name="com.dip.aiassistant.ui.fragments.ToolsFragment"
        android:label="@string/tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/memory_dest"
        android:name="com.dip.aiassistant.ui.fragments.MemoryFragment"
        android:label="@string/memory"
        tools:layout="@layout/fragment_memory" />

    <fragment
        android:id="@+id/profile_dest"
        android:name="com.dip.aiassistant.ui.fragments.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />

</navigation>
